# helloxcomponent

./: .clang-format  build-profile.json5  build.sh  helloxcomponent.p7b  symbolizer.py
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi-inl.h  napi.h  napi_init.cpp  napi_manager.cpp  napi_manager.h
entry/src/main/cpp/common/: log.h
entry/src/main/cpp/hello/: AVPlayer.cpp  AVPlayer.h  BitmapRenderer.cpp  BitmapRenderer.h  BufferQueue.cpp  BufferQueue.h  Compositor.cpp  Compositor.h  Constants.cpp  Constants.h  DelegatedNodeContent.cpp  DelegatedNodeContent.h  DisplayManager.cpp  DisplayManager.h  GLCore.cpp  GLCore.h  GLFence.cpp  GLFence.h  GLImage.cpp  GLImage.h  GLTexture.cpp  GLTexture.h  Log.h  Matrix.h  NapiManager.cpp  NapiManager.h  NativeBuffer.cpp  NativeBuffer.h  NativeWindow.cpp  NativeWindow.h  NodeContent.cpp  NodeContent.h  NonDelegatedNodeContent.cpp  NonDelegatedNodeContent.h  Renderer.h  ScopedFd.h  SurfaceControl.cpp  SurfaceControl.h  SurfaceControlNodeContent.cpp  SurfaceControlNodeContent.h  (+8 more)
entry/src/main/cpp/surface_control/: LogWrapper.cpp  log.h  surface_control.cpp  surface_control.h  surface_control_component.cpp  surface_control_component.h  surface_control_element.cpp  surface_control_element.h  surface_control_render_node.cpp  surface_control_render_node.h  surface_transaction.cpp  surface_transaction.h
entry/src/main/cpp/surface_control/ndk/: surface_control.cpp  surface_control.h
entry/src/main/cpp/surface_control/ng/: surface_control_layout_algorithm.cpp  surface_control_layout_algorithm.h  surface_control_layout_property.cpp  surface_control_layout_property.h  surface_control_model.cpp  surface_control_model.h  surface_control_paint_method.cpp  surface_control_paint_method.h  surface_control_pattern.cpp  surface_control_pattern.h
entry/src/main/cpp/types/libhelloxcomponent/: Index.d.ts  oh-package.json5
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/utils/: Logger.ets
entry/src/main/resources/base/element/: string.json
